src/objects/CustomButtonLinks__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>CORE - contains field Id references for use in custom links in related lists</description>
    <fields>
        <fullName>AccountContact_Account__c</fullName>
        <description>Salesforce Id of the AccountContact__c.Account__c field</description>
        <inlineHelpText>Salesforce Id of the AccountContact__c.Account__c field</inlineHelpText>
        <label>AccountContact Account</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallOpportunity_Call__c</fullName>
        <description>CORE - Salesforce Id of the CallOpportunity__c.Call__c field</description>
        <inlineHelpText>Salesforce Id of the CallOpportunity__c.Call__c field</inlineHelpText>
        <label>CallOpportunity Call</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallOpportunity_Opportunity__c</fullName>
        <description>CORE - Salesforce Id of the CallOpportunity__c.Opportunity__c field</description>
        <inlineHelpText>Salesforce Id of the CallOpportunity__c.Opportunity__c field</inlineHelpText>
        <label>CallOpportunity Opportunity</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Account__c</fullName>
        <description>CORE - Salesforce Id of the Call__c.Account__c field</description>
        <inlineHelpText>Salesforce Id of the Call__c.Account__c field</inlineHelpText>
        <label>Call Account</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_OpportunityProductReport__c</fullName>
        <description>Salesforce Id of the report named &apos;Opportunity Product Report&apos;</description>
        <inlineHelpText>Salesforce Id of the report named &apos;Opportunity Product Report&apos;</inlineHelpText>
        <label>Report OpportunityProductReport</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Custom Button Links</label>
</CustomObject>